# P-viewer

./: .gitignore  BUILD.md  CMakeLists.txt  CMakeLists_simple.txt  DEVELOPMENT.md  ENHANCEMENT_SUMMARY.md  FILE_OPEN_IMPLEMENTATION.md  INSTALL.md  PROJECT_STATUS.md  README.md  build_clean.bat  build_clean.sh  build_debug_windows.bat  build_unix.sh  build_windows.bat  build_windows_vcpkg.bat  check_deps_unix.sh  check_deps_windows.bat  clean_unix.sh  clean_windows.bat  create_demo_xzzpcb.py  imgui.ini  open_demo_files.bat  test_extension.cpp  test_renderer.cpp  test_viewer.bat  test_working_file.bat  vcpkg.json
build-debug/: ALL_BUILD.vcxproj  CMakeCache.txt  PCBOpenViewer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pcb_viewer.vcxproj  pcb_viewer.vcxproj.filters
build-debug/pcb_viewer.dir/Debug/: pcb_viewer.exe.recipe
build-debug/pcb_viewer.dir/Debug/pcb_viewer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-debug/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-debug/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build-debug/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-debug/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.cpp
src/core/: BRDTypes.cpp  BRDTypes.h  Utils.cpp  Utils.h
src/formats/: BRDFileBase.cpp  BRDFileBase.h  XZZPCBFile.cpp  XZZPCBFile.h  XZZPCBFile_backup.cpp  XZZPCBFile_backup.h  XZZPCBFile_full.cpp  XZZPCBFile_new.cpp  XZZPCBFile_new.h  des.cpp  des.h
src/renderer/: PCBRenderer.cpp  PCBRenderer.h  Window.cpp  Window.h
test_files/: FILE_PATHS.md  sample.xzzpcb  working_demo.xzzpcb
